--- a/.github/workflows/newmain.yml
+++ b/.github/workflows/newmain.yml
@@ -1,31 +1,32 @@
 name: Generate Snake Animation
 
 on:
-  schedule: # Executa a cada 12 horas
-    - cron: "0 */12 * * *"
-  workflow_dispatch: # Permite rodar manualmente pelo GitHub
+  schedule:
+    - cron: "0 */12 * * *"  # A cada 12 horas
+  workflow_dispatch:
 
 jobs:
-  build:
+  generate:
     name: Generate Snake SVG
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do repositório
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Gerar animação da Snake
-        uses: Platane/snk@master
+      - name: Generate Snake SVG
+        uses: Platane/snk@v3
         with:
           github_user_name: nandaconsulimoraes
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Publicar na branch 'output'
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+      - name: Push to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
-          keep_history: true
-          force_orphan: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
